fixed bug of content only being aligned after scroll

--- a/src/TableOfContents.css
+++ b/src/TableOfContents.css
@@ -1,7 +1,8 @@
 /* General TOC styles */
 .TableOfContents {
   background-color: #f0f0f0;
-  width: 500px;
+  min-width: 500px;
+  max-width: 500px;
   height: 100vh;
   padding: 20px;
   box-sizing: border-box;
